@@ -47,6 +47,10 @@ INSP.NAME.section.duplicated.args=Duplicated argument
 INSP.NAME.section.duplicated.args.message=This argument has been already added to ''{0}'' section.
 INSP.INTN.remove.duplicated.arg=Remove duplicated argument
 
+# SmkSectionUnexpectedKeywordArgsInspection
+INSP.NAME.section.unexpected.keyword.args=Unexpected keyword argument
+INSP.NAME.section.unexpected.keyword.args.message=Section ''{0}'' does not support keyword arguments
+
 # SmkSectionWrapperArgsInspectoin
 INSP.NAME.wrapper.args.missed=Missed wrapper argument
 INSP.NAME.wrapper.args.missed.message=Argument ''{0}'' missed in ''{1}''
